2004-10-07  Alexandre Oliva  <aoliva@redhat.com>

	* readelf.c (get_machine_flags): Don't fall through into m68k cpu
	types.

2004-10-01  Paul Brook  <paul@codesourcery.com>

	* readelf.c (get_arm_section_type_name): New function.
	(get_section_type_name): Use it.

2004-09-28  Nick Clifton  <nickc@redhat.com>

	* nm.c: Reorder functions to eliminate most of the static function
	prototypes.

2004-09-22  Alan Modra  <amodra@bigpond.net.au>

	* readelf.c (process_program_headers): Don't include .tbss in non-TLS
	segments.

2004-09-17  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerate.
	* config.in: Regenerate.
	* configure: Regenerate.
	* doc/Makefile.in: Regenerate.
	* po/binutils.pot: Regenerate.

2004-09-12  Alan Modra  <amodra@bigpond.net.au>

	* readelf.c (decode_location_expression): Sign extend value for
	DW_OP_const1s, DW_OP_const2s, DW_OP_const4s, DW_OP_bra, DW_OP_skip.

2004-09-09  Nick Clifton  <nickc@redhat.com>

	PR 363
	* ar.c (replace_members): Do not use get_file_size as
	ar_emul_append correctly handles missing files.

2004-09-07  H.J. Lu  <hongjiu.lu@intel.com>

	* configure: Regenerated with autconfig 2.13.

2004-09-06  Danny Smith  <dannysmith@users.sourceforge.net>

	* doc/binutils.texi (dlltool): Update --add-underscore, --kill-at
	documentation.

2004-09-06  Michael Wardle  <mbw@endbracket.net>

	* doc/binutils.texi (objdump): Document that the -x switch includes
	the effect of the -p switch.

2004-09-04  Danny Smith  <dannysmith@users.sourceforge.net>

	* dlltool.c (make_one_lib_file): Test if internal_name was
	specified by user before using it.

2004-09-02  Carlo Wood  <carlo@alinoe.com>

	PR binutils/351
	* dlltool.c (make_one_lib_file): For IDATA6 take the name from
	exp->internal_name if it is present.

2004-09-02  Alexandre Oliva  <aoliva@redhat.com>

	* MAINTAINERS: Add self as co-maintainer of FR-V.
	* readelf.c (get_machine_flags): Print FR-V cpu types.
