@@ -3042,15 +3042,13 @@ means!
 @itemx --add-underscore
 Specifies that when @command{dlltool} is creating the exports file it
 should prepend an underscore to the names of the exported functions. 
-The option is ignored for symbols with an explicit internal name
-specification provided in a .def file.
 
 @item -k
 @itemx --kill-at
 Specifies that when @command{dlltool} is creating the exports file it
-should not append the string @samp{@@ <number>}  The option is ignored
-for symbols with an explicit internal name specification provided in a
-.def file.
+should not append the string @samp{@@ <number>}.  These numbers are
+called ordinal numbers and they represent another way of accessing the
+function in a DLL, other than by name.
 
 @item -A
 @itemx --add-stdcall-alias
